--- a/src/app/add-cards/add-cards.component.html
+++ b/src/app/add-cards/add-cards.component.html
@@ -1,196 +1,212 @@
 
-   
-      <div class="container">
-        <div class="col-md-1"></div>
-        <h1 class="mt-5 mb-4 main animate_animated animate_bounce">Entertainment Offers</h1>
-      
-        <div class="row">
-          <div class="col-md-4 ">
-            <div class="card mb-4 shad shad">
-              <img src="https://i.etsystatic.com/45232961/r/il/ede926/5102033648/il_300x300.5102033648_8x85.jpg" class="card-img-top img-fluid picheight img-fluid picheight" >
-              <div class="card-body">
-                <h5 class="card-title heading heading">Concert Tickets</h5>
-                <p class="card-text">Get 20% off on tickets to your favorite concerts. Limited time offer!</p>
-                <a routerLink="https://in.bookmyshow.com/explore/concerts-hyderabad" class="btn btn-primary">Redeem</a>
-              </div>
-            </div>
+
+  
+<div class="container" >
+  
+  <div class="parent card2">
+      <div class="card ">
+          <div class="content-box">
+              <h1 class="card-title">Concert Tickets</h1>
+              <p class="card-content">
+                Get 20% off on tickets to your favorite concerts. Limited time offer...............!
+              </p>
+              <span class="see-more">Redeem</span>
           </div>
-          <div class="col-md-4">
-            <div class="card mb-4 shad">
-              <img src="https://www.transformationstreatment.center/wp-content/uploads/2020/07/movie-night-300x300.jpg" class="card-img-top img-fluid picheight" alt="...">
-              <div class="card-body">
-                <h5 class="card-title heading">Movie Night</h5>
-                <p class="card-text">Enjoy a movie night with our special 2-for-1 offer on movie tickets.</p>
-                <a routerLink="https://in.bookmyshow.com/explore/home/hyderabad" class="btn btn-primary">Redeem</a>
-              </div>
-            </div>
+          <div class="date-box">
+              <span class="month">MAR</span>
+              <span class="date">12</span>
           </div>
-          <div class="col-md-4">
-            <div class="card mb-4 shad">
-              <img src="https://hardysworld.com/wp-content/uploads/2023/03/AnyConv.com__1b3fd460-757f-4b35-8dea-6b9115c1be2a.jpg" class="card-img-top img-fluid picheight" alt="...">
-              <div class="card-body">
-                <h5 class="card-title heading">Amusement Park Passes</h5>
-                <p class="card-text">Get unlimited access to rides and attractions with our season pass.</p>
-                <a href="https://www.wonderla.com/park-timings-and-tickets/wonderla-hyderabad-timings-and-tickets.html" class="btn btn-primary">Redeem</a>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-      
-      <div class="container">
-          <h1 class="mt-5 mb-4 main animate_animated animate_bounce">Medical Offers</h1>
-        
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://bookmyscans.com/blog/wp-content/uploads/2018/03/full-body-health-checkup-bangalore-300x300.png" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Health Checkup</h5>
-                  <p class="card-text">Avail a comprehensive health checkup at our clinic with a special discount.</p>
-                  <a routerLink="https://www.vijayadiagnostic.com/campaign/radiology-pathology?gclid=CjwKCAiAtt2tBhBDEiwALZuhAP18Az_1QFjfcTIclvS7k7cZn9QjdlY9VQi4HbktmmjJFCrhA2lxnBoCVlAQAvD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://i.pinimg.com/474x/61/4f/be/614fbe86b9acdc51862c70ad6097f912.jpg" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Dental Cleaning</h5>
-                  <p class="card-text">Keep your smile bright with our discounted dental cleaning services.</p>
-                  <a routerLink="https://eledenthospitals.com/enquiry/?utm_term=dentist%20appointment%20near%20me&utm_campaign=Search_KPHB_GENERIC&utm_source=adwords&utm_medium=ppc&hsa_acc=9235521644&hsa_cam=12898783913&hsa_grp=154941034935&hsa_ad=677007405816&hsa_src=g&hsa_tgt=kwd-296195562120&hsa_kw=dentist%20appointment%20near%20me&hsa_mt=b&hsa_net=adwords&hsa_ver=3&gad_source=1&gclid=CjwKCAiAtt2tBhBDEiwALZuhABjKo9zLKzelNJ3zgOCTcRLoYtJz8oklIEoWG40VcI_R2JNvmIAyahoCCTIQAvD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://pbs.twimg.com/media/DpClc2zXUAEhl1A.jpg" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body heading">
-                  <h5 class="card-title heading">Eye Checkup</h5>
-                  <p class="card-text">Ensure your vision is clear with our special offer on eye examinations.</p>
-                  <a routerLink="https://www.dragarwal.com/book-appointment/?utm_source=Google_Search&utm_campaign=HM_AEH_Telangana_NB_Search&utm_medium=NB_Generic_Exact&utm_term=eye+checkup&gclid=CjwKCAiAtt2tBhBDEiwALZuhAJABjb7QVXTgS27MDxc-yxNNOMzg9UmHxVbz88QH9SJX_zzFf4QuOhoCwEcQAvD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
+  </div>
+
+  <div class="parent card3">
+      <div class="card">
+          <div class="content-box">
+              <h1 class="card-title">Movie Night</h1>
+              <p class="card-content">
+                Enjoy a movie night with our special 2-for-1 offer on movie tickets.................!
+              </p>
+              <span class="see-more">Redeem</span>
           </div>
-        </div>
-      
-        <div class="container">
-          <h1 class="mt-5 mb-4 main animate_animated animate_bounce">General Offers</h1>
-        
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://templates.simplified.co/thumb/a5cc7757-3750-4860-84b5-c03bc2bb9c2e.jpg" class="card-img-top img-fluid picheight">
-                <div class="card-body">
-                  <h5 class="card-title heading">Fitness Membership</h5>
-                  <p class="card-text">Join our gym and get a discounted membership with access to all facilities.</p>
-                  <a routerLink="https://www.cult.fit/fitness?utm_source=google&utm_medium=search_TCPA&utm_vertical=elite&utm_campaign=Cult_Search_Unified_Offline_NB_Gym&Centre_Elite&Pro_Cities_TCPA&utm_adg=154885603899&utm_ad=677449513663&utm_kd=gym&utm_mt=b&utm_adp=&utm_gclid=CjwKCAiAtt2tBhBDEiwALZuhAKv178qe1k_B9n29M4A-vrscjGl8IovM8NB3yKbhzW-7ODbgOUmF6BoCVP8QAvD_BwE&utm_d=c&utm_dm=&gad_source=1&gclid=CjwKCAiAtt2tBhBDEiwALZuhAKv178qe1k_B9n29M4A-vrscjGl8IovM8NB3yKbhzW-7ODbgOUmF6BoCVP8QAvD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://img.freepik.com/premium-psd/flyer-home-cleaning-service-with-man-holding-basket-cleaning-products_161398-807.jpg" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Home Cleaning Services</h5>
-                  <p class="card-text">Enjoy a clean and tidy home with our discounted cleaning services.</p>
-                  <a routerLink="https://www.nakodadcs.com/?gad_source=1&gclid=CjwKCAiAtt2tBhBDEiwALZuhAFN9wpCPhs3ZfJA_itv_KOAja8CqXhHs37PaQxE9IXPfvxzNc0-E7hoCkowQAvD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/travel-offer-template-design-7895ba395e0f77d35ebcdd40b8056c84_screen.jpg?ts=1653933032" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Travel Packages</h5>
-                  <p class="card-text">Explore new destinations with our discounted travel packages.</p>
-                  <a routerLink="https://membership.clubmahindra.com/sem-in/LP/cmh25/?utm_source=google&utm_medium=cpc&utm_campaign=IP_CMH_Search_PanIND_Core_BMM_Nov23&utm_term=Holiday&utm_content=IP_CMH_RSA_Sept23&utm_keyword=holidays%20deals&refid=CX-CMH-IND-GGL-SEM-N667-CRE-T359-C473-ENG&utm_gclid=EAIaIQobChMI7L3k0vGChAMV8KNmAh03ewZiEAAYBCAAEgLDQfD_BwE&utm_gaid={googleanalyticsid}&campaign=2010WebRegular&gclid=EAIaIQobChMI7L3k0vGChAMV8KNmAh03ewZiEAAYBCAAEgLDQfD_BwE" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
+          <div class="date-box">
+              <span class="month">MAY</span>
+              <span class="date">08</span>
           </div>
+      </div>
+  </div>
+
+  <div class="parent card2">
+    <div class="card ">
+        <div class="content-box">
+            <h1 class="card-title">Amusement Park Passes</h1>
+            <p class="card-content">
+              Get unlimited access to rides and attractions with our season pass.
+            </p>
+            <span class="see-more">Redeem</span>
         </div>
-      
-      
-        <div class="container">
-          <h1 class="mt-5 mb-4 main animate_animated animate_bounce">Food Offers</h1>
-        
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://img.freepik.com/free-vector/restaurant-business-promotion-template-vector-social-media-post_53876-126496.jpg" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Restaurant Special</h5>
-                  <p class="card-text">Enjoy a delicious meal at our restaurant with a special discount offer.</p>
-                  <a routerLink="https://www.eazydiner.com/?gad_source=1&%243p=a_google_adwords&%24always_deeplink=false&~ad_set_id&~campaign_id=20419543399&~channel=x&~keyword&~placement&gclid=CjwKCAiAtt2tBhBDEiwALZuhABY5s683pE_fTP2yFEUI8c5IdmYHFCm4lW4Nquve8mVGGLKcz4KS5hoCOkMQAvD_BwE&_branch_match_id=1255869565755395200" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/combo-pizza-offer-design-template-2d9e4dab09d67b538e4bc7a0621997d7_screen.jpg?ts=1682038677" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Pizza Combo</h5>
-                  <p class="card-text">Get a combo deal on pizzas with our special offer for pizza lovers.</p>
-                  <a routerLink="https://www.pizzahut.co.in/" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card mb-4 shad">
-                <img src="https://pbs.twimg.com/ext_tw_video_thumb/1502641650946162693/pu/img/lAOKbyH1Dl1xF5vp.jpg" class="card-img-top img-fluid picheight" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title heading">Cafe Discount</h5>
-                  <p class="card-text">Visit our cafe and enjoy your favorite drinks with a discount.</p>
-                  <a routerLink="https://www.caferio.com/" class="btn btn-primary">Redeem</a>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="date-box">
+            <span class="month">JUN</span>
+            <span class="date">15</span>
         </div>
-    
+    </div>
+</div>
 
-
-<hr>
-<footer>
-<div class="comtainer-fluid">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-2">
-      <h3 class="fea">Features</h3>
-      <a routerLink=""><i class="fa-solid fa-angle-right text-black text-black">Set Limits</i></a><br>
-      <a routerLink=""><i class="fa-solid fa-angle-right text-black">Report</i></a><br>
-      <a routerLink=""><i class="fa-solid fa-angle-right text-black">Trends</i></a><br>
-      <a routerLink=""><i class="fa-solid fa-angle-right text-black">Set Limit</i></a>
-    </div>
-   
-    <div class="col-md-2">
-        <h3 class="fea">Get In Touch</h3>
-        <h5>Call us 9848022338</h5>
-        <h6>Mon-Fri 8am-6pm WST<br>Sat 9am-5pm WST</h6>
-        <h5>Head Office</h5>
-        <h6>Level 6 Kings Square 1<br>556 Wellion Street<br>Hyderabad 500067</h6>
-
-    </div>
-    <div class="col-md-2">
-
-        <a routerLink=""><i class="fa-solid fa-angle-right text-black">Online enquiry</i></a><br>
-        <a routerLink=""><i class="fa-solid fa-angle-right text-black">Contact Us</i></a><br>
-    </div>
-    <div class="col-md-2 lala">
-       <a routerLink=""><i class="fa-brands fa-twitter lala"></i></a>&nbsp;&nbsp;
-       <a routerLink=""><i class="fa-brands fa-facebook"></i></a>
-       <h6 ><a routerLink=""><i class="fa-brands fa-google-play gp p-2 text-black">Get it On<br> Google</i></a></h6>
-    </div>
-    <div class="col-md-2">
-        <h5 class="fea"> 
-            Acknowledgement of Country<br></h5>
-            
-         <h6>  At Neo-Finance we respectfully acknowledge the Traditional Custodians of the land on which we work and pay our respects to Elders past and present.
-            
-            2024 © Police & Nurses Limited  ABN 69 087 651 876 AFSL/Hyderabad Credit Licence 240701</h6>
-    </div>
+<div class="parent card3">
+  <div class="card">
+      <div class="content-box">
+          <h1 class="card-title">Restaurant Special</h1>
+          <p class="card-content">
+            Enjoy a delicious meal at our restaurant with a special discount .
+          </p>
+          <span class="see-more">Redeem</span>
+      </div>
+      <div class="date-box">
+          <span class="month">JUL</span>
+          <span class="date">3</span>
+      </div>
   </div>
 </div>
-    </footer>
+
+
+  <div class="parent card2">
+      <div class="card ">
+          <div class="content-box">
+              <h1 class="card-title">Dental Cleaning</h1>
+              <p class="card-content">
+                Keep your smile bright with our discounted dental cleaning services..................!
+              </p>
+              <span class="see-more">Redeem</span>
+          </div>
+          <div class="date-box">
+              <span class="month">MAR</span>
+              <span class="date">25</span>
+          </div>
+      </div>
+  </div>
+
+  <div class="parent card3">
+      <div class="card">
+          <div class="content-box">
+              <h1 class="card-title">Health Checkup</h1>
+              <p class="card-content">
+                Avail a comprehensive health checkup at our clinic with a special discount..............!
+              </p>
+              <span class="see-more">Redeem</span>
+          </div>
+          <div class="date-box">
+              <span class="month">JUNE</span>
+              <span class="date">17</span>
+          </div>
+      </div>
+  </div>
+  
+
+  
+
+
+  <div class="parent card2">
+      <div class="card ">
+          <div class="content-box">
+              <h1 class="card-title">Eye Checkup</h1>
+              <p class="card-content">
+                Ensure your vision is clear with our special offer on eye examinations best offer.
+              </p>
+              <span class="see-more">Redeem</span>
+          </div>
+          <div class="date-box">
+              <span class="month">APR</span>
+              <span class="date">1</span>
+          </div>
+      </div>
+  </div>
+  <div class="parent card3">
+    <div class="card">
+        <div class="content-box">
+            <h1 class="card-title">Medical Offers</h1>
+            <p class="card-content">
+              Avail a comprehensive health checkup at our clinic with a special discount.
+            </p>
+            <span class="see-more">Redeem</span>
+        </div>
+        <div class="date-box">
+            <span class="month">JAN</span>
+            <span class="date">11</span>
+        </div>
+    </div>
+  </div>
+  
+  <div class="parent card2">
+    <div class="card ">
+        <div class="content-box">
+            <h1 class="card-title">Home Cleaning</h1>
+            <p class="card-content">
+              Ensure your vision is clear with our special offer on eye examinations best offer.
+            </p>
+            <span class="see-more">Redeem</span>
+        </div>
+        <div class="date-box">
+            <span class="month">APR</span>
+            <span class="date">17</span>
+        </div>
+    </div>
+  </div>
+
+<div class="parent card3">
+  <div class="card">
+      <div class="content-box">
+          <h1 class="card-title">Fitness Membership</h1>
+          <p class="card-content">
+            Join our gym and get a discounted membership .
+          </p>
+          <span class="see-more">Redeem</span>
+      </div>
+      <div class="date-box">
+          <span class="month">JUNE</span>
+          <span class="date">27</span>
+      </div>
+  </div>
+</div>
+
+
+<div class="parent card2">
+  <div class="card ">
+      <div class="content-box">
+          <h1 class="card-title">Cafe <br> Discount</h1>
+          <p class="card-content">
+            Visit our cafe and enjoy your favorite drinks with a discount.
+          </p>
+          <span class="see-more">Redeem</span>
+      </div>
+      <div class="date-box">
+          <span class="month">FEB</span>
+          <span class="date">9</span>
+      </div>
+  </div>
+</div>
+
+<div class="parent card3">
+  <div class="card">
+      <div class="content-box">
+          <h1 class="card-title">Food Offers</h1>
+          <p class="card-content">
+            Enjoy a delicious meal at our restaurant with a special discount offer.
+          </p>
+          <span class="see-more">Redeem</span>
+      </div>
+      <div class="date-box">
+          <span class="month">JUNE</span>
+          <span class="date">24</span>
+      </div>
+  </div>
+</div>
+
+
+
+
+</div>
+
+
+
+
+        
+    
