--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -31,10 +31,9 @@
         data-aos="fade-up"
         data-aos-delay="200"
       >
-        <h1>Neo Finance is a Lithuanian peer-to-peer lending platform</h1>
+        <h1>Neo Finance is a one stop financial planning platform</h1>
         <h2>
-          that connects investors with borrowers for personal loans, offering
-          transparent and automated investment opportunities.
+          that analyses your spending patterns and provides useful insights to keep you finacialy disciplined while rewarding along the way
         </h2>
         <div class="d-flex justify-content-center justify-content-lg-start">
           <a routerLink="registerAndLogin" class="btn-get-started scrollto">Get Started</a>
@@ -107,34 +106,27 @@
       <div class="row content">
         <div class="col-lg-6">
           <p>
-            "About Neo Finance: Your Gateway to Transparent Peer-to-Peer
-            Lending, Connecting Investors and Borrowers for Financial
-            Empowerment."
+            "About Neo Finance: Your Gateway to Financial discipline"
           </p>
           <ul>
             <li>
-              <i class="ri-check-double-line"></i> Transparent Peer-to-Peer
-              Lending
+              <i class="ri-check-double-line"></i> Provides visually rich trends
             </li>
             <li>
-              <i class="ri-check-double-line"></i>Automated Investment
-              Opportunities
+              <i class="ri-check-double-line"></i>Automated Spend Limit tracking
             </li>
             <li>
               <i class="ri-check-double-line"></i>Financial Empowerment Through
-              Responsible Lending
+              Responsible Learning
             </li>
           </ul>
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0">
           <p>
-            Neo Finance is a pioneering peer-to-peer lending platform based in
-            Lithuania, facilitating a direct connection between investors and
-            borrowers. Launched in 2015, Neo Finance focuses on transparent and
-            efficient lending processes, providing individuals with access to
-            personal loans. The platform utilizes a unique scoring model to
-            assess borrower creditworthiness and offers automated investment
-            opportunities for investors.
+            Neo Finance is a pioneering Fianacial management platform based in
+            Hyderabad, facilitating a thourogh insight into your sepnding habits. Launched in 2024, Neo Finance focuses on visualy rich and
+            efficient trends and forecasts, providing individuals with clear understanding on their finacial health. The platform analyses your spending habits and alerts you if you exceed your limits.
+            While the users become desciplined they also earn exciting rewards and offers along the way.
           </p>
           <a href="#" class="btn-learn-more">Learn More</a>
         </div>
@@ -156,9 +148,8 @@
               several reasons
             </h3>
             <p>
-              Borrowers can use Neo Finance to access personal loans with
-              transparent terms and fair conditions, providing an alternative to
-              traditional lending institutions.
+              Users can use Neo Finance to access personal finance information with
+              rich UI and clear trends, providing an easier interface to manage personal finance and spending.
             </p>
           </div>
 
@@ -170,7 +161,7 @@
                   class="collapse"
                   data-bs-target="#accordion-list-1"
                   ><span>01</span> What is the primary purpose of Neo Finance
-                  for borrowers? <i class="bx bx-chevron-down icon-show"></i
+                  for users? <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
                 <div
@@ -179,10 +170,9 @@
                   data-bs-parent=".accordion-list"
                 >
                   <p>
-                    Neo Finance serves as a platform for borrowers to access
-                    personal loans with transparency and fairness, connecting
-                    them directly with investors in a peer-to-peer lending
-                    model.
+                    Neo Finance serves as a platform for users to access
+                    personal finanace with transparency and fairness, connecting
+                    them directly with users in a finance management platform.
                   </p>
                 </div>
               </li>
@@ -192,7 +182,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#accordion-list-2"
                   class="collapsed"
-                  ><span>02</span> How does Neo Finance benefit investors?
+                  ><span>02</span> How does Neo Finance benefit users?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -202,9 +192,9 @@
                   data-bs-parent=".accordion-list"
                 >
                   <p>
-                    Investors on Neo Finance can diversify their portfolios
-                    through automated investment opportunities, leveraging the
-                    platform's unique scoring model to make informed decisions
+                    Investors on Neo Finance can view their portfolios
+                    through automated insight  leveraging the
+                    platform's unique trends model to make informed decisions
                     and achieve potential returns.
                   </p>
                 </div>
@@ -225,9 +215,7 @@
                   data-bs-parent=".accordion-list"
                 >
                   <p>
-                    Neo Finance distinguishes itself by promoting responsible
-                    lending practices, ensuring financial empowerment for both
-                    borrowers and investors in a secure and regulated
+                    Neo Finance distinguishes itself by promoting user financial well being, ensuring financial empowerment in a secure and regulated
                     environment, with a strong emphasis on transparency.
                   </p>
                 </div>
@@ -248,7 +236,7 @@
       <div class="section-title">
         <h2>Services</h2>
         <p>
-          Neo Finance primarily offers services related to peer-to-peer lending.
+          Neo Finance primarily offers services related to personal finace management.
           Here are some key services provided by Neo Finance:
         </p>
       </div>
@@ -263,9 +251,7 @@
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="">Peer-to-Peer Lending</a></h4>
             <p>
-              Facilitating direct lending and borrowing relationships between
-              individuals, Neo Finance allows users to access personal loans or
-              invest in loans offered by others.
+              Facilitating direct insights and borrowing trends, Neo Finance allows users to access personal spending data and trends.
             </p>
           </div>
         </div>
@@ -277,10 +263,10 @@
         >
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Automated Investment</a></h4>
+            <h4><a href="">Automated Notifications</a></h4>
             <p>
-              Investors can use the platform's automated investment feature,
-              which streamlines the investment process by allocating funds based
+              Investors can use the platform's automated notification feature,
+              which streamlines the personal finance process by allocating funds based
               on predefined criteria, reducing manual intervention.
             </p>
           </div>
@@ -293,11 +279,11 @@
         >
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Loan Scoring Model</a></h4>
+            <h4><a href="">Limit identification Model</a></h4>
             <p>
-              Neo Finance employs a unique scoring model to assess the
-              creditworthiness of borrowers, providing investors with
-              information to make informed decisions on loan investments.
+              Neo Finance employs a unique limit tracking model to assess the
+              spends of users, providing them with
+              information to make informed decisions on their spending.
             </p>
           </div>
         </div>
@@ -309,11 +295,11 @@
         >
           <div class="icon-box">
             <div class="icon"><i class="bx bx-layer"></i></div>
-            <h4><a href="">Transparent Loan Information</a></h4>
+            <h4><a href="">Transparent Finacial Information</a></h4>
             <p>
               The platform prioritizes transparency, offering detailed
-              information about loan terms, interest rates, and borrower
-              profiles, enabling users to make well-informed financial
+              information about spends across categories and thier
+              limits, enabling users to make well-informed financial
               decisions.
             </p>
           </div>
@@ -331,8 +317,7 @@
           <h3>Call To Action</h3>
           <p>
             "Experience a new era of transparent and empowering finance with Neo
-            Finance. Join our community today to access fair loans, diversify
-            your investments, and be part of a responsible financial ecosystem.
+            Finance. Join our community today to access great insights based on the user spends.
             Start your journey towards financial empowerment – Neo Finance
             awaits you!"
           </p>
@@ -351,10 +336,7 @@
       <div class="section-title">
         <h2>Team</h2>
         <p>
-          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
-          aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
-          quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
-          fugiat sit in iste officiis commodi quidem hic quas.
+         We are a passionate and driven team determined towards providing users insights into their personal spending habits.
         </p>
       </div>
 
@@ -493,11 +475,8 @@
               data-bs-parent=".faq-list"
             >
               <p>
-                Neo Finance is a peer-to-peer lending platform that connects
-                investors with borrowers. Investors can lend money directly to
-                individuals seeking personal loans through our online
-                marketplace.
-              </p>
+                Neo Finance is a expemse tracking platform that tracks your spending information and gives you insights.
+                           </p>
             </div>
           </li>
 
@@ -508,15 +487,15 @@
               data-bs-target="#faq-list-2"
               class="collapsed"
             >
-              How do I get started as an investor on Neo Finance?
+              How do I get started as a user on Neo Finance?
               <i class="bx bx-chevron-down icon-show"></i
               ><i class="bx bx-chevron-up icon-close"></i
             ></a>
             <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                To begin investing, create an account on our platform, deposit
-                funds, and explore automated investment options or manually
-                select loans based on borrower profiles and risk factors
+                To begin investing, create an account on our platform, link your accounts, 
+                and explore automated tracking options or manually
+                upload sttements.
               </p>
             </div>
           </li>
@@ -528,15 +507,14 @@
               data-bs-target="#faq-list-3"
               class="collapsed"
             >
-              What types of loans are available on Neo Finance?
+              What types of tracking options are available on Neo Finance?
               <i class="bx bx-chevron-down icon-show"></i
               ><i class="bx bx-chevron-up icon-close"></i
             ></a>
             <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Neo Finance offers a variety of personal loans, including
-                consumer loans, for different purposes such as debt
-                consolidation, home improvement, or unforeseen expenses.
+                Neo Finance offers a variety of options loans, including
+                dirct email/message tracking, manual import and third party app tracking.
               </p>
             </div>
           </li>
@@ -548,16 +526,16 @@
               data-bs-target="#faq-list-4"
               class="collapsed"
             >
-              How is borrower creditworthiness determined?
+              How is user limit determined?
               <i class="bx bx-chevron-down icon-show"></i
               ><i class="bx bx-chevron-up icon-close"></i
             ></a>
             <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
               <p>
-                We use a unique scoring model that evaluates the
-                creditworthiness of borrowers based on various factors,
-                providing investors with valuable information to make informed
-                lending decisions.
+                We use a unique limit model that evaluates the
+                spends of borrowers based on various factors,
+                providing users with valuable information to make informed
+                decisions.
               </p>
             </div>
           </li>
@@ -569,16 +547,16 @@
               data-bs-target="#faq-list-5"
               class="collapsed"
             >
-              What sets Neo Finance apart from other lending platforms?
+              What sets Neo Finance apart from other expense tracking platforms?
               <i class="bx bx-chevron-down icon-show"></i
               ><i class="bx bx-chevron-up icon-close"></i
             ></a>
             <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Neo Finance distinguishes itself with a strong emphasis on
-                transparency, responsible lending, and a user-friendly
+                transparency, responsible tracking, and a user-friendly
                 interface. Our platform is regulated, providing a secure
-                environment for both investors and borrowers.
+                environment for users.
               </p>
             </div>
           </li>
@@ -595,7 +573,7 @@
         <h2>Contact</h2>
         <p>
           We value your inquiries and feedback at Neo Finance. Whether you have
-          questions about our peer-to-peer lending platform, need assistance
+          questions about our finance tracking platform, need assistance
           with your account, or simply want to connect with us, we're here to
           help.
         </p>
@@ -735,15 +713,15 @@
           <h4>Our Services</h4>
           <ul>
             <li>
-              <i class="bx bx-chevron-right"></i> <a href="#">Home Loans</a>
+              <i class="bx bx-chevron-right"></i> <a href="#">Expense tracking</a>
             </li>
             <li>
               <i class="bx bx-chevron-right"></i>
-              <a href="#">Personal loans</a>
+              <a href="#">Trend identification</a>
             </li>
             <li>
               <i class="bx bx-chevron-right"></i>
-              <a href="#">Business Loans</a>
+              <a href="#">Limit tracking</a>
             </li>
             <li>
               <i class="bx bx-chevron-right"></i> <a href="#">Etc...!</a>
