--- a/src/app/register-and-login/register-and-login.component.html
+++ b/src/app/register-and-login/register-and-login.component.html
@@ -99,8 +99,7 @@
                 type="submit"
                 (click)="form.checkValidity() ? submit() : null"
                 id="submit"
-              >
-                Submit
+              > Submit
               </button>
             </div>
           </div>
